@@ -21,7 +21,7 @@
 ## `geonetwork:3`
 
 ```console
-$ docker pull geonetwork@sha256:9daed1dc2a13ad6c75ab6edaf0e6f608ada2f143c92e1072fe5dc6637e114435
+$ docker pull geonetwork@sha256:9e6ae796c6df55711aca86cf287417d6c794df56efd50f33748f67eae3b23932
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -31,14 +31,14 @@ $ docker pull geonetwork@sha256:9daed1dc2a13ad6c75ab6edaf0e6f608ada2f143c92e1072
 ### `geonetwork:3` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:df1c4e31caea69ee99e50bd1a3e3f9972b65a6d2545e00eb4520a82ba6ab1022
+$ docker pull geonetwork@sha256:a5a60e52d14b2281df1171b31054399bddb7f041028154b9d0a387423b92ca21
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **518.9 MB (518933852 bytes)**  
+-	Total Size: **518.9 MB (518936801 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:4da7298a103e9add5962ce5506802ea8b4c350e5b9833a9fefe3669ce1c36a65`
+-	Image ID: `sha256:030cbcccf89c7b3837025c573368ea42ee24bb44f574e0918c91cb4538f59fd0`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -101,19 +101,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Fri, 06 Nov 2020 21:48:59 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_VERSION=3.10.4
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_DOWNLOAD_MD5=a7ba7e05da47db26476e7600f63e5da3
-# Fri, 06 Nov 2020 21:49:00 GMT
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -158,19 +158,19 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
 		Size: 128.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:6e048e7db5501b04b858aa47d24699e2d6c30d7ae315e0b7407838ffcb4dabb4`  
-		Last Modified: Fri, 06 Nov 2020 21:51:01 GMT  
-		Size: 276.3 MB (276294063 bytes)  
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:aafea5ffb40d6656d0f2293558f51f386f1b8697887d2bec846224afc3311cf0`  
-		Last Modified: Fri, 06 Nov 2020 21:50:41 GMT  
-		Size: 250.0 B  
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10`
 
 ```console
-$ docker pull geonetwork@sha256:9daed1dc2a13ad6c75ab6edaf0e6f608ada2f143c92e1072fe5dc6637e114435
+$ docker pull geonetwork@sha256:9e6ae796c6df55711aca86cf287417d6c794df56efd50f33748f67eae3b23932
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -180,14 +180,14 @@ $ docker pull geonetwork@sha256:9daed1dc2a13ad6c75ab6edaf0e6f608ada2f143c92e1072
 ### `geonetwork:3.10` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:df1c4e31caea69ee99e50bd1a3e3f9972b65a6d2545e00eb4520a82ba6ab1022
+$ docker pull geonetwork@sha256:a5a60e52d14b2281df1171b31054399bddb7f041028154b9d0a387423b92ca21
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **518.9 MB (518933852 bytes)**  
+-	Total Size: **518.9 MB (518936801 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:4da7298a103e9add5962ce5506802ea8b4c350e5b9833a9fefe3669ce1c36a65`
+-	Image ID: `sha256:030cbcccf89c7b3837025c573368ea42ee24bb44f574e0918c91cb4538f59fd0`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -250,19 +250,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Fri, 06 Nov 2020 21:48:59 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_VERSION=3.10.4
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_DOWNLOAD_MD5=a7ba7e05da47db26476e7600f63e5da3
-# Fri, 06 Nov 2020 21:49:00 GMT
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -307,37 +307,345 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
 		Size: 128.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:6e048e7db5501b04b858aa47d24699e2d6c30d7ae315e0b7407838ffcb4dabb4`  
-		Last Modified: Fri, 06 Nov 2020 21:51:01 GMT  
-		Size: 276.3 MB (276294063 bytes)  
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:aafea5ffb40d6656d0f2293558f51f386f1b8697887d2bec846224afc3311cf0`  
-		Last Modified: Fri, 06 Nov 2020 21:50:41 GMT  
-		Size: 250.0 B  
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10.5`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:9e6ae796c6df55711aca86cf287417d6c794df56efd50f33748f67eae3b23932
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.10.5` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:a5a60e52d14b2281df1171b31054399bddb7f041028154b9d0a387423b92ca21
+```
+
+-	Docker Version: 19.03.12
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **518.9 MB (518936801 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:030cbcccf89c7b3837025c573368ea42ee24bb44f574e0918c91cb4538f59fd0`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Tue, 13 Oct 2020 01:38:30 GMT
+ADD file:6627ad39ea0cb9fcb212342326d14efaff51aece1fd0dc16d5bbcaa25d858622 in / 
+# Tue, 13 Oct 2020 01:38:30 GMT
+CMD ["bash"]
+# Tue, 13 Oct 2020 02:14:45 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 02:14:57 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 13 Oct 2020 02:15:20 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 09:02:44 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 09:02:44 GMT
+ENV LANG=C.UTF-8
+# Tue, 13 Oct 2020 09:04:55 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 13 Oct 2020 09:04:56 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 13 Oct 2020 09:04:57 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Mon, 26 Oct 2020 23:26:52 GMT
+ENV JAVA_VERSION=8u272
+# Mon, 26 Oct 2020 23:27:00 GMT
+RUN set -eux; 		arch="$(dpkg --print-architecture)"; 	case "$arch" in 		amd64 | i386:x86-64) downloadUrl=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u272-b10/OpenJDK8U-jdk_x64_linux_8u272b10.tar.gz ;; 		*) echo >&2 "error: unsupported architecture: '$arch'"; exit 1 ;; 	esac; 		wget -O openjdk.tgz.asc "$downloadUrl.sign"; 	wget -O openjdk.tgz "$downloadUrl" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Mon, 26 Oct 2020 23:58:45 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Mon, 26 Oct 2020 23:58:46 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Mon, 26 Oct 2020 23:58:46 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Mon, 26 Oct 2020 23:58:47 GMT
+WORKDIR /usr/local/tomcat
+# Mon, 26 Oct 2020 23:58:47 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Mon, 26 Oct 2020 23:58:47 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV TOMCAT_MAJOR=8
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV TOMCAT_VERSION=8.5.59
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV TOMCAT_SHA512=3106fa39f1859ba31c87d245eaf8efe9c1f2f4837dc4f259c245d2c9b55d3593e97a9925e7d012d397987279965b8e24d940cfdda062d8ac9b64e41396120bd9
+# Fri, 06 Nov 2020 20:38:53 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local mvnFile="${1:-}"; 		local success=; 		local distUrl=; 		for distUrl in 			"https://www.apache.org/dyn/closer.cgi?action=download&filename=$distFile" 			"https://www-us.apache.org/dist/$distFile" 			"https://www.apache.org/dist/$distFile" 			"https://archive.apache.org/dist/$distFile" 			${mvnFile:+"https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/$mvnFile"} 		; do 			if wget -O "$f" "$distUrl" --progress=dot:giga && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		mv webapps webapps.dist; 	mkdir webapps; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| xargs -rt readlink -e 		| sort -u 		| xargs -rt dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work; 		catalina.sh version
+# Fri, 06 Nov 2020 20:38:55 GMT
+RUN set -eux; 	nativeLines="$(catalina.sh configtest 2>&1)"; 	nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')"; 	nativeLines="$(echo "$nativeLines" | sort -u)"; 	if ! echo "$nativeLines" | grep -E 'INFO: Loaded( APR based)? Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Fri, 06 Nov 2020 20:38:55 GMT
+EXPOSE 8080
+# Fri, 06 Nov 2020 20:38:56 GMT
+CMD ["catalina.sh" "run"]
+# Fri, 06 Nov 2020 21:48:59 GMT
+ENV GN_FILE=geonetwork.war
+# Fri, 06 Nov 2020 21:48:59 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Fri, 06 Nov 2020 21:48:59 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Mon, 09 Nov 2020 20:24:19 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Mon, 09 Nov 2020 20:24:19 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Mon, 09 Nov 2020 20:24:20 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Mon, 09 Nov 2020 20:24:20 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:e4c3d3e4f7b024979a1c12daa4073f6353b2ba92d96418bc90451994927c9bff`  
+		Last Modified: Tue, 13 Oct 2020 01:48:02 GMT  
+		Size: 50.4 MB (50395978 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:101c41d0463bc77661fb3343235b16d536a92d2efb687046164d413e51bd4fc4`  
+		Last Modified: Tue, 13 Oct 2020 02:28:35 GMT  
+		Size: 7.8 MB (7811737 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:8275efcd805f9905d7def23603618236284b0be6b9e47455c638fbfb03fa9208`  
+		Last Modified: Tue, 13 Oct 2020 02:28:35 GMT  
+		Size: 10.0 MB (9996326 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:751620502a7a2905067c2f32d4982fb9b310b9808670ce82c0e2b40f5307a3ee`  
+		Last Modified: Tue, 13 Oct 2020 02:28:53 GMT  
+		Size: 51.8 MB (51829492 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a59da3a7d0e775b46d7b062233c4f8178125dfee7cba1ab2a14de7a565272feb`  
+		Last Modified: Tue, 13 Oct 2020 09:11:20 GMT  
+		Size: 5.3 MB (5284675 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5ad32ac1e5277bcc2107b2e14c98ab4b1c2bb8b97e1054d12f5fd6c01188e4f2`  
+		Last Modified: Tue, 13 Oct 2020 09:12:45 GMT  
+		Size: 210.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:27c13473e3bd5c8ba5cfab08e2aef3a92bb344c90d3716aeaf505c42e4601d7c`  
+		Last Modified: Mon, 26 Oct 2020 23:29:58 GMT  
+		Size: 105.9 MB (105877826 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:717370f5d395439c938f59b013859b61eba375859234cc4fc7caed9ec1b51c3c`  
+		Last Modified: Tue, 27 Oct 2020 00:08:51 GMT  
+		Size: 139.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ff4a734eefd9297cd25961451043c9d44fa2e7112bc1a637dafb3a7076554526`  
+		Last Modified: Fri, 06 Nov 2020 20:56:31 GMT  
+		Size: 11.4 MB (11443028 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f5cd2bc008351ee13dfd3ff54ecb7f49a09faade872aaf49109279e87bb3fdc2`  
+		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
+		Size: 128.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10.5-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:85bacb8c8109daa8baa56ac7b55355578089f4bcd0697124ae87c5f135260c60
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.10.5-postgres` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:5e65152b532323f0a93fbbeaf19d1804d854f258c95399d8a11631f444f80718
+```
+
+-	Docker Version: 19.03.12
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **530.7 MB (530748335 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:4cacd26a390504e98a048835003ced262435962b01a5b4a61961fa2fc98aa7ad`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Tue, 13 Oct 2020 01:38:30 GMT
+ADD file:6627ad39ea0cb9fcb212342326d14efaff51aece1fd0dc16d5bbcaa25d858622 in / 
+# Tue, 13 Oct 2020 01:38:30 GMT
+CMD ["bash"]
+# Tue, 13 Oct 2020 02:14:45 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 02:14:57 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 13 Oct 2020 02:15:20 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 09:02:44 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 09:02:44 GMT
+ENV LANG=C.UTF-8
+# Tue, 13 Oct 2020 09:04:55 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 13 Oct 2020 09:04:56 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 13 Oct 2020 09:04:57 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Mon, 26 Oct 2020 23:26:52 GMT
+ENV JAVA_VERSION=8u272
+# Mon, 26 Oct 2020 23:27:00 GMT
+RUN set -eux; 		arch="$(dpkg --print-architecture)"; 	case "$arch" in 		amd64 | i386:x86-64) downloadUrl=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u272-b10/OpenJDK8U-jdk_x64_linux_8u272b10.tar.gz ;; 		*) echo >&2 "error: unsupported architecture: '$arch'"; exit 1 ;; 	esac; 		wget -O openjdk.tgz.asc "$downloadUrl.sign"; 	wget -O openjdk.tgz "$downloadUrl" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Mon, 26 Oct 2020 23:58:45 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Mon, 26 Oct 2020 23:58:46 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Mon, 26 Oct 2020 23:58:46 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Mon, 26 Oct 2020 23:58:47 GMT
+WORKDIR /usr/local/tomcat
+# Mon, 26 Oct 2020 23:58:47 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Mon, 26 Oct 2020 23:58:47 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV TOMCAT_MAJOR=8
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV TOMCAT_VERSION=8.5.59
+# Tue, 27 Oct 2020 00:03:12 GMT
+ENV TOMCAT_SHA512=3106fa39f1859ba31c87d245eaf8efe9c1f2f4837dc4f259c245d2c9b55d3593e97a9925e7d012d397987279965b8e24d940cfdda062d8ac9b64e41396120bd9
+# Fri, 06 Nov 2020 20:38:53 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local mvnFile="${1:-}"; 		local success=; 		local distUrl=; 		for distUrl in 			"https://www.apache.org/dyn/closer.cgi?action=download&filename=$distFile" 			"https://www-us.apache.org/dist/$distFile" 			"https://www.apache.org/dist/$distFile" 			"https://archive.apache.org/dist/$distFile" 			${mvnFile:+"https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/$mvnFile"} 		; do 			if wget -O "$f" "$distUrl" --progress=dot:giga && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		mv webapps webapps.dist; 	mkdir webapps; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| xargs -rt readlink -e 		| sort -u 		| xargs -rt dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work; 		catalina.sh version
+# Fri, 06 Nov 2020 20:38:55 GMT
+RUN set -eux; 	nativeLines="$(catalina.sh configtest 2>&1)"; 	nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')"; 	nativeLines="$(echo "$nativeLines" | sort -u)"; 	if ! echo "$nativeLines" | grep -E 'INFO: Loaded( APR based)? Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Fri, 06 Nov 2020 20:38:55 GMT
+EXPOSE 8080
+# Fri, 06 Nov 2020 20:38:56 GMT
+CMD ["catalina.sh" "run"]
+# Fri, 06 Nov 2020 21:48:59 GMT
+ENV GN_FILE=geonetwork.war
+# Fri, 06 Nov 2020 21:48:59 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Fri, 06 Nov 2020 21:48:59 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Mon, 09 Nov 2020 20:24:19 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Mon, 09 Nov 2020 20:24:19 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Mon, 09 Nov 2020 20:24:20 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Mon, 09 Nov 2020 20:24:20 GMT
+CMD ["catalina.sh" "run"]
+# Mon, 09 Nov 2020 20:24:33 GMT
+RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
+# Mon, 09 Nov 2020 20:24:34 GMT
+RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
+# Mon, 09 Nov 2020 20:24:34 GMT
+COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
+# Mon, 09 Nov 2020 20:24:35 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Mon, 09 Nov 2020 20:24:35 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Mon, 09 Nov 2020 20:24:35 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:e4c3d3e4f7b024979a1c12daa4073f6353b2ba92d96418bc90451994927c9bff`  
+		Last Modified: Tue, 13 Oct 2020 01:48:02 GMT  
+		Size: 50.4 MB (50395978 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:101c41d0463bc77661fb3343235b16d536a92d2efb687046164d413e51bd4fc4`  
+		Last Modified: Tue, 13 Oct 2020 02:28:35 GMT  
+		Size: 7.8 MB (7811737 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:8275efcd805f9905d7def23603618236284b0be6b9e47455c638fbfb03fa9208`  
+		Last Modified: Tue, 13 Oct 2020 02:28:35 GMT  
+		Size: 10.0 MB (9996326 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:751620502a7a2905067c2f32d4982fb9b310b9808670ce82c0e2b40f5307a3ee`  
+		Last Modified: Tue, 13 Oct 2020 02:28:53 GMT  
+		Size: 51.8 MB (51829492 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a59da3a7d0e775b46d7b062233c4f8178125dfee7cba1ab2a14de7a565272feb`  
+		Last Modified: Tue, 13 Oct 2020 09:11:20 GMT  
+		Size: 5.3 MB (5284675 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5ad32ac1e5277bcc2107b2e14c98ab4b1c2bb8b97e1054d12f5fd6c01188e4f2`  
+		Last Modified: Tue, 13 Oct 2020 09:12:45 GMT  
+		Size: 210.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:27c13473e3bd5c8ba5cfab08e2aef3a92bb344c90d3716aeaf505c42e4601d7c`  
+		Last Modified: Mon, 26 Oct 2020 23:29:58 GMT  
+		Size: 105.9 MB (105877826 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:717370f5d395439c938f59b013859b61eba375859234cc4fc7caed9ec1b51c3c`  
+		Last Modified: Tue, 27 Oct 2020 00:08:51 GMT  
+		Size: 139.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ff4a734eefd9297cd25961451043c9d44fa2e7112bc1a637dafb3a7076554526`  
+		Last Modified: Fri, 06 Nov 2020 20:56:31 GMT  
+		Size: 11.4 MB (11443028 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f5cd2bc008351ee13dfd3ff54ecb7f49a09faade872aaf49109279e87bb3fdc2`  
+		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
+		Size: 128.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a2b7ef526faec7efb5ce707ca4572f950924883a6c0e46a94491092b7a3022e3`  
+		Last Modified: Mon, 09 Nov 2020 20:25:54 GMT  
+		Size: 11.8 MB (11808165 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ca36916852e65d843a699e2f6fdbed0362d8c640ef8727c4df0a0497fba5ad88`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.3 KB (1268 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:711f0920f7d6718874805af4df76e7b46cd146ed850e39fbbbca98d89650dcce`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.1 KB (1127 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:8df220ff23a1e58d32069240c6fe5b940f840463932f42cdd0259489ea133b2f`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 974.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:975c34ae2508531252a3b739e226af171395fd6f11832586be4857f569402b0a
+$ docker pull geonetwork@sha256:85bacb8c8109daa8baa56ac7b55355578089f4bcd0697124ae87c5f135260c60
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -347,14 +655,14 @@ $ docker pull geonetwork@sha256:975c34ae2508531252a3b739e226af171395fd6f11832586
 ### `geonetwork:3.10-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:9c03b543662273e8e2ada32e8683244842690bd539dac22ac1c322673f423bac
+$ docker pull geonetwork@sha256:5e65152b532323f0a93fbbeaf19d1804d854f258c95399d8a11631f444f80718
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **530.7 MB (530745619 bytes)**  
+-	Total Size: **530.7 MB (530748335 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:6cba0e9f0f174f01f02b6eec7fc28e4e527d98f3c4e33ab5cce0dad12937ddae`
+-	Image ID: `sha256:4cacd26a390504e98a048835003ced262435962b01a5b4a61961fa2fc98aa7ad`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -417,31 +725,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Fri, 06 Nov 2020 21:48:59 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_VERSION=3.10.4
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_DOWNLOAD_MD5=a7ba7e05da47db26476e7600f63e5da3
-# Fri, 06 Nov 2020 21:49:00 GMT
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 CMD ["catalina.sh" "run"]
-# Fri, 06 Nov 2020 21:49:47 GMT
+# Mon, 09 Nov 2020 20:24:33 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:34 GMT
 RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:34 GMT
 COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:49 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -486,28 +794,28 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
 		Size: 128.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:6e048e7db5501b04b858aa47d24699e2d6c30d7ae315e0b7407838ffcb4dabb4`  
-		Last Modified: Fri, 06 Nov 2020 21:51:01 GMT  
-		Size: 276.3 MB (276294063 bytes)  
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:aafea5ffb40d6656d0f2293558f51f386f1b8697887d2bec846224afc3311cf0`  
-		Last Modified: Fri, 06 Nov 2020 21:50:41 GMT  
-		Size: 250.0 B  
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:eb50f23f2b7acf233b864726a7a1140629d99b5f88073f5c369c4acb4e10d5a7`  
-		Last Modified: Fri, 06 Nov 2020 21:51:12 GMT  
-		Size: 11.8 MB (11808403 bytes)  
+	-	`sha256:a2b7ef526faec7efb5ce707ca4572f950924883a6c0e46a94491092b7a3022e3`  
+		Last Modified: Mon, 09 Nov 2020 20:25:54 GMT  
+		Size: 11.8 MB (11808165 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:062a1edd422bb8e814d8df2d2443360f3e0cd67c3c4f55d9a1a2fae3a973b241`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
-		Size: 1.3 KB (1266 bytes)  
+	-	`sha256:ca36916852e65d843a699e2f6fdbed0362d8c640ef8727c4df0a0497fba5ad88`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.3 KB (1268 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:e2e2162f9bfd8ed1abb39273067e67d94d472012a04171be418c077d56f68fbd`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
-		Size: 1.1 KB (1124 bytes)  
+	-	`sha256:711f0920f7d6718874805af4df76e7b46cd146ed850e39fbbbca98d89650dcce`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.1 KB (1127 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:5fdf3cfedcd06d9300d22c4a696f244444eb68ddf3e26e331c20d03c784bfc8d`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
+	-	`sha256:8df220ff23a1e58d32069240c6fe5b940f840463932f42cdd0259489ea133b2f`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
 		Size: 974.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
@@ -1166,7 +1474,7 @@ CMD ["catalina.sh" "run"]
 ## `geonetwork:3-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:975c34ae2508531252a3b739e226af171395fd6f11832586be4857f569402b0a
+$ docker pull geonetwork@sha256:85bacb8c8109daa8baa56ac7b55355578089f4bcd0697124ae87c5f135260c60
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1176,14 +1484,14 @@ $ docker pull geonetwork@sha256:975c34ae2508531252a3b739e226af171395fd6f11832586
 ### `geonetwork:3-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:9c03b543662273e8e2ada32e8683244842690bd539dac22ac1c322673f423bac
+$ docker pull geonetwork@sha256:5e65152b532323f0a93fbbeaf19d1804d854f258c95399d8a11631f444f80718
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **530.7 MB (530745619 bytes)**  
+-	Total Size: **530.7 MB (530748335 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:6cba0e9f0f174f01f02b6eec7fc28e4e527d98f3c4e33ab5cce0dad12937ddae`
+-	Image ID: `sha256:4cacd26a390504e98a048835003ced262435962b01a5b4a61961fa2fc98aa7ad`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1246,31 +1554,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Fri, 06 Nov 2020 21:48:59 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_VERSION=3.10.4
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_DOWNLOAD_MD5=a7ba7e05da47db26476e7600f63e5da3
-# Fri, 06 Nov 2020 21:49:00 GMT
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 CMD ["catalina.sh" "run"]
-# Fri, 06 Nov 2020 21:49:47 GMT
+# Mon, 09 Nov 2020 20:24:33 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:34 GMT
 RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:34 GMT
 COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:49 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1315,35 +1623,35 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
 		Size: 128.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:6e048e7db5501b04b858aa47d24699e2d6c30d7ae315e0b7407838ffcb4dabb4`  
-		Last Modified: Fri, 06 Nov 2020 21:51:01 GMT  
-		Size: 276.3 MB (276294063 bytes)  
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:aafea5ffb40d6656d0f2293558f51f386f1b8697887d2bec846224afc3311cf0`  
-		Last Modified: Fri, 06 Nov 2020 21:50:41 GMT  
-		Size: 250.0 B  
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:eb50f23f2b7acf233b864726a7a1140629d99b5f88073f5c369c4acb4e10d5a7`  
-		Last Modified: Fri, 06 Nov 2020 21:51:12 GMT  
-		Size: 11.8 MB (11808403 bytes)  
+	-	`sha256:a2b7ef526faec7efb5ce707ca4572f950924883a6c0e46a94491092b7a3022e3`  
+		Last Modified: Mon, 09 Nov 2020 20:25:54 GMT  
+		Size: 11.8 MB (11808165 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:062a1edd422bb8e814d8df2d2443360f3e0cd67c3c4f55d9a1a2fae3a973b241`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
-		Size: 1.3 KB (1266 bytes)  
+	-	`sha256:ca36916852e65d843a699e2f6fdbed0362d8c640ef8727c4df0a0497fba5ad88`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.3 KB (1268 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:e2e2162f9bfd8ed1abb39273067e67d94d472012a04171be418c077d56f68fbd`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
-		Size: 1.1 KB (1124 bytes)  
+	-	`sha256:711f0920f7d6718874805af4df76e7b46cd146ed850e39fbbbca98d89650dcce`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.1 KB (1127 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:5fdf3cfedcd06d9300d22c4a696f244444eb68ddf3e26e331c20d03c784bfc8d`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
+	-	`sha256:8df220ff23a1e58d32069240c6fe5b940f840463932f42cdd0259489ea133b2f`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
 		Size: 974.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4`
 
 ```console
-$ docker pull geonetwork@sha256:691b26a8ea1e670d9a0fc94ae669ed4163b14d403f721cd0af396a26425e3a15
+$ docker pull geonetwork@sha256:43b0b077d0052fe54015aa9114473bf742c9e3ed68f2bda0dae182f96b92f67f
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1353,14 +1661,14 @@ $ docker pull geonetwork@sha256:691b26a8ea1e670d9a0fc94ae669ed4163b14d403f721cd0
 ### `geonetwork:4` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:e9d9a00fd41005ad64505a8946596a8c770f274242d580423f92e0a25c0e5fb3
+$ docker pull geonetwork@sha256:8ac4f662d8c9bb4c5b705af74eb4e0b3ab656210206db390816ed82a4c6b4c49
 ```
 
--	Docker Version: 18.09.7
+-	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **415.4 MB (415449048 bytes)**  
+-	Total Size: **416.2 MB (416151632 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:5e1a51c1f381a330d3210d5f4dec2dd8aef6ba7dd2e3cd332884a3d9ff06b458`
+-	Image ID: `sha256:8393a51cc87fe6146538e8db8f136066bc16a4b647fb0162faf6570da7385679`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -1415,31 +1723,31 @@ EXPOSE 8080
 ENTRYPOINT ["/docker-entrypoint.sh"]
 # Wed, 28 Oct 2020 00:28:13 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 03 Nov 2020 01:19:58 GMT
-ENV GN_FILE=GeoNetwork-4.0.0-0.war
-# Tue, 03 Nov 2020 01:19:58 GMT
-ENV GN_VERSION=4.0.0
-# Tue, 03 Nov 2020 01:19:58 GMT
-ENV GN_DOWNLOAD_MD5=6cf3524a0e3e51e713402b97e086ba20
-# Tue, 03 Nov 2020 01:19:58 GMT
+# Mon, 09 Nov 2020 20:24:46 GMT
 ENV DATA_DIR=/catalogue-data
-# Tue, 03 Nov 2020 01:19:58 GMT
+# Mon, 09 Nov 2020 20:24:46 GMT
 ENV JAVA_OPTS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC         -Dgeonetwork.resources.dir=/catalogue-data/resources         -Dgeonetwork.data.dir=/catalogue-data         -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist         -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
-# Tue, 03 Nov 2020 01:19:58 GMT
+# Mon, 09 Nov 2020 20:24:46 GMT
 USER root
-# Tue, 03 Nov 2020 01:20:03 GMT
+# Mon, 09 Nov 2020 20:24:51 GMT
 RUN apt-get -y update &&     apt-get -y install curl &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p /${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
-# Tue, 03 Nov 2020 01:20:03 GMT
+# Mon, 09 Nov 2020 20:24:51 GMT
 USER jetty
-# Tue, 03 Nov 2020 01:22:18 GMT
-RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/$GN_FILE/download &&      echo "$GN_DOWNLOAD_MD5 *geonetwork.war" | md5sum -c &&      unzip geonetwork.war &&      rm geonetwork.war
-# Tue, 03 Nov 2020 01:22:19 GMT
-COPY file:dd8a2e13125a0e923e6fca52f21ce1931e1b02c3b74b8caaed8dad301a6e5cc5 in /geonetwork-entrypoint.sh 
-# Tue, 03 Nov 2020 01:22:19 GMT
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_FILE=GeoNetwork-4.0.1-0.war
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_VERSION=4.0.1
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_DOWNLOAD_MD5=e9c885de19644856d855c0ea78052b12
+# Mon, 09 Nov 2020 20:25:04 GMT
+RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Mon, 09 Nov 2020 20:25:04 GMT
+COPY file:ca46ab251df3dfc253cb04cf962e7266e42428fab31ad2f583a7c86b06d5f778 in /geonetwork-entrypoint.sh 
+# Mon, 09 Nov 2020 20:25:04 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 03 Nov 2020 01:22:19 GMT
+# Mon, 09 Nov 2020 20:25:05 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 03 Nov 2020 01:22:19 GMT
+# Mon, 09 Nov 2020 20:25:05 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -1476,23 +1784,23 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 28 Oct 2020 00:31:50 GMT  
 		Size: 1.4 KB (1447 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:15faa2d8ff3609e29315f8db990ebce880c0ca43200d2bc1249aa991e9543fd3`  
-		Last Modified: Tue, 03 Nov 2020 01:22:41 GMT  
-		Size: 468.0 B  
+	-	`sha256:1f312b1d410b4b5e739421306361bde4689b0855d4c21cda0df036d67ef82e41`  
+		Last Modified: Mon, 09 Nov 2020 20:26:02 GMT  
+		Size: 469.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:4dda9b93a52b7bde91363bdbe445ca94648108535b01b98de0e22dec51f3f4e2`  
-		Last Modified: Tue, 03 Nov 2020 01:23:01 GMT  
-		Size: 290.7 MB (290655677 bytes)  
+	-	`sha256:5fcec90c102af899289304dae13bc7b5571d95345f966ebdd03afd6241986c0c`  
+		Last Modified: Mon, 09 Nov 2020 20:26:20 GMT  
+		Size: 291.4 MB (291358261 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:c40b41fc496df0678923299be1d7e93b215b567f0a3875c15041df4f6ce4f6b5`  
-		Last Modified: Tue, 03 Nov 2020 01:22:41 GMT  
-		Size: 958.0 B  
+	-	`sha256:3524c0b0a511e2890d1cd04be7203705236b3de9ebb65a67809d06d6c0209722`  
+		Last Modified: Mon, 09 Nov 2020 20:26:01 GMT  
+		Size: 957.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.0`
 
 ```console
-$ docker pull geonetwork@sha256:691b26a8ea1e670d9a0fc94ae669ed4163b14d403f721cd0af396a26425e3a15
+$ docker pull geonetwork@sha256:43b0b077d0052fe54015aa9114473bf742c9e3ed68f2bda0dae182f96b92f67f
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1502,14 +1810,14 @@ $ docker pull geonetwork@sha256:691b26a8ea1e670d9a0fc94ae669ed4163b14d403f721cd0
 ### `geonetwork:4.0` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:e9d9a00fd41005ad64505a8946596a8c770f274242d580423f92e0a25c0e5fb3
+$ docker pull geonetwork@sha256:8ac4f662d8c9bb4c5b705af74eb4e0b3ab656210206db390816ed82a4c6b4c49
 ```
 
--	Docker Version: 18.09.7
+-	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **415.4 MB (415449048 bytes)**  
+-	Total Size: **416.2 MB (416151632 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:5e1a51c1f381a330d3210d5f4dec2dd8aef6ba7dd2e3cd332884a3d9ff06b458`
+-	Image ID: `sha256:8393a51cc87fe6146538e8db8f136066bc16a4b647fb0162faf6570da7385679`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -1564,31 +1872,31 @@ EXPOSE 8080
 ENTRYPOINT ["/docker-entrypoint.sh"]
 # Wed, 28 Oct 2020 00:28:13 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 03 Nov 2020 01:19:58 GMT
-ENV GN_FILE=GeoNetwork-4.0.0-0.war
-# Tue, 03 Nov 2020 01:19:58 GMT
-ENV GN_VERSION=4.0.0
-# Tue, 03 Nov 2020 01:19:58 GMT
-ENV GN_DOWNLOAD_MD5=6cf3524a0e3e51e713402b97e086ba20
-# Tue, 03 Nov 2020 01:19:58 GMT
+# Mon, 09 Nov 2020 20:24:46 GMT
 ENV DATA_DIR=/catalogue-data
-# Tue, 03 Nov 2020 01:19:58 GMT
+# Mon, 09 Nov 2020 20:24:46 GMT
 ENV JAVA_OPTS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC         -Dgeonetwork.resources.dir=/catalogue-data/resources         -Dgeonetwork.data.dir=/catalogue-data         -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist         -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
-# Tue, 03 Nov 2020 01:19:58 GMT
+# Mon, 09 Nov 2020 20:24:46 GMT
 USER root
-# Tue, 03 Nov 2020 01:20:03 GMT
+# Mon, 09 Nov 2020 20:24:51 GMT
 RUN apt-get -y update &&     apt-get -y install curl &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p /${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
-# Tue, 03 Nov 2020 01:20:03 GMT
+# Mon, 09 Nov 2020 20:24:51 GMT
 USER jetty
-# Tue, 03 Nov 2020 01:22:18 GMT
-RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/$GN_FILE/download &&      echo "$GN_DOWNLOAD_MD5 *geonetwork.war" | md5sum -c &&      unzip geonetwork.war &&      rm geonetwork.war
-# Tue, 03 Nov 2020 01:22:19 GMT
-COPY file:dd8a2e13125a0e923e6fca52f21ce1931e1b02c3b74b8caaed8dad301a6e5cc5 in /geonetwork-entrypoint.sh 
-# Tue, 03 Nov 2020 01:22:19 GMT
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_FILE=GeoNetwork-4.0.1-0.war
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_VERSION=4.0.1
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_DOWNLOAD_MD5=e9c885de19644856d855c0ea78052b12
+# Mon, 09 Nov 2020 20:25:04 GMT
+RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Mon, 09 Nov 2020 20:25:04 GMT
+COPY file:ca46ab251df3dfc253cb04cf962e7266e42428fab31ad2f583a7c86b06d5f778 in /geonetwork-entrypoint.sh 
+# Mon, 09 Nov 2020 20:25:04 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Tue, 03 Nov 2020 01:22:19 GMT
+# Mon, 09 Nov 2020 20:25:05 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Tue, 03 Nov 2020 01:22:19 GMT
+# Mon, 09 Nov 2020 20:25:05 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -1625,32 +1933,172 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 28 Oct 2020 00:31:50 GMT  
 		Size: 1.4 KB (1447 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:15faa2d8ff3609e29315f8db990ebce880c0ca43200d2bc1249aa991e9543fd3`  
-		Last Modified: Tue, 03 Nov 2020 01:22:41 GMT  
-		Size: 468.0 B  
+	-	`sha256:1f312b1d410b4b5e739421306361bde4689b0855d4c21cda0df036d67ef82e41`  
+		Last Modified: Mon, 09 Nov 2020 20:26:02 GMT  
+		Size: 469.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:4dda9b93a52b7bde91363bdbe445ca94648108535b01b98de0e22dec51f3f4e2`  
-		Last Modified: Tue, 03 Nov 2020 01:23:01 GMT  
-		Size: 290.7 MB (290655677 bytes)  
+	-	`sha256:5fcec90c102af899289304dae13bc7b5571d95345f966ebdd03afd6241986c0c`  
+		Last Modified: Mon, 09 Nov 2020 20:26:20 GMT  
+		Size: 291.4 MB (291358261 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:c40b41fc496df0678923299be1d7e93b215b567f0a3875c15041df4f6ce4f6b5`  
-		Last Modified: Tue, 03 Nov 2020 01:22:41 GMT  
-		Size: 958.0 B  
+	-	`sha256:3524c0b0a511e2890d1cd04be7203705236b3de9ebb65a67809d06d6c0209722`  
+		Last Modified: Mon, 09 Nov 2020 20:26:01 GMT  
+		Size: 957.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.0.1`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:43b0b077d0052fe54015aa9114473bf742c9e3ed68f2bda0dae182f96b92f67f
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:4.0.1` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:8ac4f662d8c9bb4c5b705af74eb4e0b3ab656210206db390816ed82a4c6b4c49
+```
+
+-	Docker Version: 19.03.12
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **416.2 MB (416151632 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:8393a51cc87fe6146538e8db8f136066bc16a4b647fb0162faf6570da7385679`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Tue, 13 Oct 2020 01:38:30 GMT
+ADD file:6627ad39ea0cb9fcb212342326d14efaff51aece1fd0dc16d5bbcaa25d858622 in / 
+# Tue, 13 Oct 2020 01:38:30 GMT
+CMD ["bash"]
+# Tue, 13 Oct 2020 02:14:45 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 02:14:57 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 13 Oct 2020 09:04:13 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 13 Oct 2020 09:04:14 GMT
+ENV LANG=C.UTF-8
+# Tue, 13 Oct 2020 09:05:51 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 13 Oct 2020 09:05:51 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 13 Oct 2020 09:05:52 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Mon, 26 Oct 2020 23:27:24 GMT
+ENV JAVA_VERSION=8u272
+# Mon, 26 Oct 2020 23:27:29 GMT
+RUN set -eux; 		arch="$(dpkg --print-architecture)"; 	case "$arch" in 		amd64 | i386:x86-64) downloadUrl=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u272-b10/OpenJDK8U-jre_x64_linux_8u272b10.tar.gz ;; 		*) echo >&2 "error: unsupported architecture: '$arch'"; exit 1 ;; 	esac; 		wget -O openjdk.tgz.asc "$downloadUrl.sign"; 	wget -O openjdk.tgz "$downloadUrl" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		java -version
+# Wed, 28 Oct 2020 00:28:07 GMT
+ENV JETTY_VERSION=9.4.33.v20201020
+# Wed, 28 Oct 2020 00:28:07 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Wed, 28 Oct 2020 00:28:07 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Wed, 28 Oct 2020 00:28:08 GMT
+ENV TMPDIR=/tmp/jetty
+# Wed, 28 Oct 2020 00:28:08 GMT
+ENV PATH=/usr/local/jetty/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 28 Oct 2020 00:28:08 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.33.v20201020/jetty-home-9.4.33.v20201020.tar.gz
+# Wed, 28 Oct 2020 00:28:08 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	FBA2B18D238AB852DF95745C76157BDF03D0DCD6 	5C9579B3DB2E506429319AAEF33B071B29559E1E 	F254B35617DC255D9344BCFA873A8E86B4372146
+# Wed, 28 Oct 2020 00:28:11 GMT
+RUN set -xe ; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		for server in 			ha.pool.sks-keyservers.net 			p80.pool.sks-keyservers.net:80 			ipv4.pool.sks-keyservers.net 			pgp.mit.edu ; 		do 			if gpg --batch --keyserver "$server" --recv-keys "$key"; then 				break; 			fi; 		done; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="server,http,deploy,jsp,jstl,ext,resources,websocket" ; 	mkdir -p "$TMPDIR" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Wed, 28 Oct 2020 00:28:12 GMT
+WORKDIR /var/lib/jetty
+# Wed, 28 Oct 2020 00:28:12 GMT
+COPY multi:aa77a0f6aef2add1a97bf742e5d8ca9322cda3f66ea7673ea49c33da7e5b0889 in / 
+# Wed, 28 Oct 2020 00:28:12 GMT
+USER jetty
+# Wed, 28 Oct 2020 00:28:12 GMT
+EXPOSE 8080
+# Wed, 28 Oct 2020 00:28:12 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Wed, 28 Oct 2020 00:28:13 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Mon, 09 Nov 2020 20:24:46 GMT
+ENV DATA_DIR=/catalogue-data
+# Mon, 09 Nov 2020 20:24:46 GMT
+ENV JAVA_OPTS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC         -Dgeonetwork.resources.dir=/catalogue-data/resources         -Dgeonetwork.data.dir=/catalogue-data         -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist         -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
+# Mon, 09 Nov 2020 20:24:46 GMT
+USER root
+# Mon, 09 Nov 2020 20:24:51 GMT
+RUN apt-get -y update &&     apt-get -y install curl &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p /${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
+# Mon, 09 Nov 2020 20:24:51 GMT
+USER jetty
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_FILE=GeoNetwork-4.0.1-0.war
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_VERSION=4.0.1
+# Mon, 09 Nov 2020 20:24:51 GMT
+ENV GN_DOWNLOAD_MD5=e9c885de19644856d855c0ea78052b12
+# Mon, 09 Nov 2020 20:25:04 GMT
+RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Mon, 09 Nov 2020 20:25:04 GMT
+COPY file:ca46ab251df3dfc253cb04cf962e7266e42428fab31ad2f583a7c86b06d5f778 in /geonetwork-entrypoint.sh 
+# Mon, 09 Nov 2020 20:25:04 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Mon, 09 Nov 2020 20:25:05 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Mon, 09 Nov 2020 20:25:05 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:e4c3d3e4f7b024979a1c12daa4073f6353b2ba92d96418bc90451994927c9bff`  
+		Last Modified: Tue, 13 Oct 2020 01:48:02 GMT  
+		Size: 50.4 MB (50395978 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:101c41d0463bc77661fb3343235b16d536a92d2efb687046164d413e51bd4fc4`  
+		Last Modified: Tue, 13 Oct 2020 02:28:35 GMT  
+		Size: 7.8 MB (7811737 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:8275efcd805f9905d7def23603618236284b0be6b9e47455c638fbfb03fa9208`  
+		Last Modified: Tue, 13 Oct 2020 02:28:35 GMT  
+		Size: 10.0 MB (9996326 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:556bd89391a75c1b656e0c713eeb3948386f8196f733ee29387b4b82172120ed`  
+		Last Modified: Tue, 13 Oct 2020 09:12:18 GMT  
+		Size: 5.5 MB (5529399 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:26c447bde8474d63de1ade0b79f5a7e2db593d5b529c882e8b751187213af387`  
+		Last Modified: Tue, 13 Oct 2020 09:13:23 GMT  
+		Size: 208.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:8b4260df6f09692255c9e198db38fb6fac7f64cc6420fbaa95d5e881ce6633e8`  
+		Last Modified: Mon, 26 Oct 2020 23:30:34 GMT  
+		Size: 41.3 MB (41284516 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:bfbd9c2cf6213420452841881cb3f05ab20edf328cabbc649051c206ec3e7f3a`  
+		Last Modified: Wed, 28 Oct 2020 00:31:51 GMT  
+		Size: 9.8 MB (9772334 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d0103d45f0e065e75bbbf5567c156ea071d10d21b881a60942d94cd170e7dc50`  
+		Last Modified: Wed, 28 Oct 2020 00:31:50 GMT  
+		Size: 1.4 KB (1447 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:1f312b1d410b4b5e739421306361bde4689b0855d4c21cda0df036d67ef82e41`  
+		Last Modified: Mon, 09 Nov 2020 20:26:02 GMT  
+		Size: 469.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5fcec90c102af899289304dae13bc7b5571d95345f966ebdd03afd6241986c0c`  
+		Last Modified: Mon, 09 Nov 2020 20:26:20 GMT  
+		Size: 291.4 MB (291358261 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3524c0b0a511e2890d1cd04be7203705236b3de9ebb65a67809d06d6c0209722`  
+		Last Modified: Mon, 09 Nov 2020 20:26:01 GMT  
+		Size: 957.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:latest`
 
 ```console
-$ docker pull geonetwork@sha256:9daed1dc2a13ad6c75ab6edaf0e6f608ada2f143c92e1072fe5dc6637e114435
+$ docker pull geonetwork@sha256:9e6ae796c6df55711aca86cf287417d6c794df56efd50f33748f67eae3b23932
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1660,14 +2108,14 @@ $ docker pull geonetwork@sha256:9daed1dc2a13ad6c75ab6edaf0e6f608ada2f143c92e1072
 ### `geonetwork:latest` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:df1c4e31caea69ee99e50bd1a3e3f9972b65a6d2545e00eb4520a82ba6ab1022
+$ docker pull geonetwork@sha256:a5a60e52d14b2281df1171b31054399bddb7f041028154b9d0a387423b92ca21
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **518.9 MB (518933852 bytes)**  
+-	Total Size: **518.9 MB (518936801 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:4da7298a103e9add5962ce5506802ea8b4c350e5b9833a9fefe3669ce1c36a65`
+-	Image ID: `sha256:030cbcccf89c7b3837025c573368ea42ee24bb44f574e0918c91cb4538f59fd0`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1730,19 +2178,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Fri, 06 Nov 2020 21:48:59 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_VERSION=3.10.4
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_DOWNLOAD_MD5=a7ba7e05da47db26476e7600f63e5da3
-# Fri, 06 Nov 2020 21:49:00 GMT
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1787,19 +2235,19 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
 		Size: 128.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:6e048e7db5501b04b858aa47d24699e2d6c30d7ae315e0b7407838ffcb4dabb4`  
-		Last Modified: Fri, 06 Nov 2020 21:51:01 GMT  
-		Size: 276.3 MB (276294063 bytes)  
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:aafea5ffb40d6656d0f2293558f51f386f1b8697887d2bec846224afc3311cf0`  
-		Last Modified: Fri, 06 Nov 2020 21:50:41 GMT  
-		Size: 250.0 B  
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:postgres`
 
 ```console
-$ docker pull geonetwork@sha256:975c34ae2508531252a3b739e226af171395fd6f11832586be4857f569402b0a
+$ docker pull geonetwork@sha256:85bacb8c8109daa8baa56ac7b55355578089f4bcd0697124ae87c5f135260c60
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1809,14 +2257,14 @@ $ docker pull geonetwork@sha256:975c34ae2508531252a3b739e226af171395fd6f11832586
 ### `geonetwork:postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:9c03b543662273e8e2ada32e8683244842690bd539dac22ac1c322673f423bac
+$ docker pull geonetwork@sha256:5e65152b532323f0a93fbbeaf19d1804d854f258c95399d8a11631f444f80718
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **530.7 MB (530745619 bytes)**  
+-	Total Size: **530.7 MB (530748335 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:6cba0e9f0f174f01f02b6eec7fc28e4e527d98f3c4e33ab5cce0dad12937ddae`
+-	Image ID: `sha256:4cacd26a390504e98a048835003ced262435962b01a5b4a61961fa2fc98aa7ad`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1879,31 +2327,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Fri, 06 Nov 2020 21:48:59 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_VERSION=3.10.4
-# Fri, 06 Nov 2020 21:48:59 GMT
-ENV GN_DOWNLOAD_MD5=a7ba7e05da47db26476e7600f63e5da3
-# Fri, 06 Nov 2020 21:49:00 GMT
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_VERSION=3.10.5
+# Mon, 09 Nov 2020 20:23:54 GMT
+ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
+# Mon, 09 Nov 2020 20:23:54 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Fri, 06 Nov 2020 21:49:33 GMT
+# Mon, 09 Nov 2020 20:24:19 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:34 GMT
+# Mon, 09 Nov 2020 20:24:20 GMT
 CMD ["catalina.sh" "run"]
-# Fri, 06 Nov 2020 21:49:47 GMT
+# Mon, 09 Nov 2020 20:24:33 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:34 GMT
 RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:34 GMT
 COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Fri, 06 Nov 2020 21:49:48 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Fri, 06 Nov 2020 21:49:49 GMT
+# Mon, 09 Nov 2020 20:24:35 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1948,27 +2396,27 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Fri, 06 Nov 2020 20:56:28 GMT  
 		Size: 128.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:6e048e7db5501b04b858aa47d24699e2d6c30d7ae315e0b7407838ffcb4dabb4`  
-		Last Modified: Fri, 06 Nov 2020 21:51:01 GMT  
-		Size: 276.3 MB (276294063 bytes)  
+	-	`sha256:88640b5fa60efef2985f5e8bf4f705870bdcc7a2fc9ca526b6bc98f5215e39f4`  
+		Last Modified: Mon, 09 Nov 2020 20:25:38 GMT  
+		Size: 276.3 MB (276297014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:aafea5ffb40d6656d0f2293558f51f386f1b8697887d2bec846224afc3311cf0`  
-		Last Modified: Fri, 06 Nov 2020 21:50:41 GMT  
-		Size: 250.0 B  
+	-	`sha256:31ea205bb773364ab5d8b0ec11498204cbbd9909438f58a2a692599681eac14d`  
+		Last Modified: Mon, 09 Nov 2020 20:25:18 GMT  
+		Size: 248.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:eb50f23f2b7acf233b864726a7a1140629d99b5f88073f5c369c4acb4e10d5a7`  
-		Last Modified: Fri, 06 Nov 2020 21:51:12 GMT  
-		Size: 11.8 MB (11808403 bytes)  
+	-	`sha256:a2b7ef526faec7efb5ce707ca4572f950924883a6c0e46a94491092b7a3022e3`  
+		Last Modified: Mon, 09 Nov 2020 20:25:54 GMT  
+		Size: 11.8 MB (11808165 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:062a1edd422bb8e814d8df2d2443360f3e0cd67c3c4f55d9a1a2fae3a973b241`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
-		Size: 1.3 KB (1266 bytes)  
+	-	`sha256:ca36916852e65d843a699e2f6fdbed0362d8c640ef8727c4df0a0497fba5ad88`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.3 KB (1268 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:e2e2162f9bfd8ed1abb39273067e67d94d472012a04171be418c077d56f68fbd`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
-		Size: 1.1 KB (1124 bytes)  
+	-	`sha256:711f0920f7d6718874805af4df76e7b46cd146ed850e39fbbbca98d89650dcce`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
+		Size: 1.1 KB (1127 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:5fdf3cfedcd06d9300d22c4a696f244444eb68ddf3e26e331c20d03c784bfc8d`  
-		Last Modified: Fri, 06 Nov 2020 21:51:10 GMT  
+	-	`sha256:8df220ff23a1e58d32069240c6fe5b940f840463932f42cdd0259489ea133b2f`  
+		Last Modified: Mon, 09 Nov 2020 20:25:51 GMT  
 		Size: 974.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
